GNOME Bugzilla – Bug 788194
glfilter: Unmap video frame in error case
Last modified: 2017-09-28 11:00:16 UTC
Created attachment 360453 [details] [review] attached patch Hi, In gst_gl_filter_filter_texture() function, missed Unmap video frame in failed case code: if (!gst_video_frame_map (&gl_frame, &filter->in_info, inbuf, GST_MAP_READ | GST_MAP_GL)) { ret = FALSE; goto inbuf_error; } in_tex = gl_frame.map[0].memory; if (!gst_is_gl_memory (in_tex)) { ret = FALSE; GST_ERROR_OBJECT (filter, "Input memory must be GstGLMemory"); goto inbuf_error; } sol: gst_video_frame_unmap (&gl_frame); added Patch attached. Please review and share feedback.
Comment on attachment 360453 [details] [review] attached patch Please mark your patches as such when attaching them :)
Review of attachment 360453 [details] [review]: ::: gst-libs/gst/gl/gstglfilter.c @@ +930,1 @@ goto inbuf_error; Just "goto unmap_out_error" here, that already does what you need
Created attachment 360592 [details] [review] patch file attached added changes as per comments . patch attached . Please review
commit 5df10fa6f3a5317a2a1649437a143d1d7f9e8afe (HEAD -> master) Author: Ponnam Srinivas <p.srinivas@samsung.com> Date: Thu Sep 28 16:20:53 2017 +0530 glfilter: Unmap video frame in error case https://bugzilla.gnome.org/show_bug.cgi?id=788194