glfilter: Unmap video frame in error case

https://bugzilla.gnome.org/show_bug.cgi?id=788194